// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should show the component with custom title 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`ProductTitle should show the componente with the product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Cofree Mug / Card without image
  </span>
</div>
`;
